feat: remove inventory
